# blanket-maker

./: .gitignore  README.md  main.py  palette.json
.github/workflows/: build_cmake.yml
cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  blanketMaker  cmake_install.cmake  main.cpp  palette.json
html/: index.html
pages/: index.html
palettes/: all10.json  all20.json  blue.json  gray.json  green.json  purple.json  red.json  yellow.json
python/: main.py
web/: index.html
